--- a/schedule/12_neighborhoodchg.qmd
+++ b/schedule/12_neighborhoodchg.qmd
@@ -11,7 +11,21 @@ This week we will explore the causes and consequences of neighborhood change. We
 
 ## Learning Goals
 
+-   Understand the common economic and social theories that explain neighborhood change.
+-   Articulate why neighborhood change often becomes a political issue.
+-   Critically engage with how narratives of neighborhood change influence the social, economic, and political futures of neighborhoods.
+
 ## Readings
+
+Smith, Neil, Gentrification and the Rent Gap [{{< fa arrow-up-right-from-square >}}](https://uofi.box.com/s/j14auc1u7z2ejkfrktv0sl9agy930x43)
+
+Saunders, Pete, The State of Gentrification [{{< fa arrow-up-right-from-square >}}](https://uofi.box.com/s/n384sdn09lum3j0lpxr0vmcslzsfe7fi)
+
+Ellen, Ingrid, and Justin Steil, The Dream Revisited: Contemporary Debates about Housing Segregation and Opportunity (Discussion 24) [{{< fa arrow-up-right-from-square >}}](https://uofi.box.com/s/778pqakd8ffofk1lnfksfnqb2bstsv3c)
+
+Voorhees Center, The Socioeconomic Change of Chicago's Community Areas (1970 - 2010) [{{< fa arrow-up-right-from-square >}}](https://uofi.box.com/s/f5fzu7ofv0udoaaimnebdlsz2ac7r3t6)
+
+Voorhees Center, Gentrficiation and Neighborhood Change: Helpful Tools for Communities (skim) [{{< fa arrow-up-right-from-square >}}](https://uofi.box.com/s/d9q26wyr9mkkqzjsk9hzoqe99quhs5mh)
 
 ## Slides
 
