--- a/schedule/16_wrapup.qmd
+++ b/schedule/16_wrapup.qmd
@@ -7,12 +7,10 @@ editor: visual
 
 ## Description
 
-This week, we\'ll have final class presentations where we will share final housing policy proposals created over the course of the the semester. We will also conclude our class with a final discussion about your future in housing policy.
+This week, we'll have final class presentations where we will share final housing policy proposals created over the course of the the semester. We will also conclude our class with a final discussion about your future in housing policy.
 
 ## Learning Goals
 
-## Readings
+- Celebrate and learn from your accomplishments over the course of the semester.
 
-## Slides
-
-## Additional Resources
+## Presentations
