--- a/schedule/07_production.qmd
+++ b/schedule/07_production.qmd
@@ -7,9 +7,12 @@ editor: visual
 
 ## Description
 
-This week we will examine a range of housing production strategies, many that involve public-private partnerships or incentives to deliver affordable housing. We\'ll also talk about the Opportunity Zone program which leverages tax benefits to investors for investments in eligible underinvested neighborhoods.
+This week we will examine a range of housing production strategies, many that involve public-private partnerships or incentives to deliver affordable housing. We'll also talk about the Opportunity Zone program which leverages tax benefits to investors for investments in eligible underinvested neighborhoods.
 
 ## Learning Goals
+
+-   Understand why governments might incentivize capital investment in distressed neighborhoods.
+-   Critically engage with policy debates regarding the benefits and costs of place-based capital incentives.
 
 ## Readings
 
@@ -21,7 +24,6 @@ Schwartz
 
 -   Chapter 7
 
--   Chapter 8
 
 ## Slides
 
