--- a/schedule/06_fedassisted.qmd
+++ b/schedule/06_fedassisted.qmd
@@ -9,6 +9,10 @@ editor: visual
 
 Housing vouchers involve private market landlords to deliver affordable housing by paying a portion of the tenant's rent to make their share of the rent more affordable. Aside from delivering on housing quality and affordability promises, vouchers have become a major tool in the fight for housing choice, and have been used in both experimental programs and as legal remedies for racial and economic segregation. This week we'll explore the evolution of the voucher program and will examine the strengths and limitations of leveraging vouchers for affordability and accessibility of housing.
 
+### Discussants
+
+Erica
+
 ## Learning Goals
 
 -   Understand the primary rationale for the creation of the Housing Choice Voucher program.
